Refresh scrollspy after each layout complete event. Issue a masonry relayout in a time out event to make the grid relayout much more reliably accross all browsers after a resize or rotate on mobile platform.

--- a/_less/_page-contents.less
+++ b/_less/_page-contents.less
@@ -47,7 +47,7 @@ a.btn-primary.pull-right span.fa-arrow-circle-right {
 }
 
 .thumbnail {
-  border: none;
+  border: 0 none;
   padding: 0 5px 0 0;
   @media screen and (min-width: @screen-xs-min) {
     padding: 0 15px 0 0;
